# BLITZ-TACTICS

./: .gitignore  .replit  ARCHITECTURE.md  BUILDATHON.md  PROJECT_STATUS.md  README.md  replit.md
attached_assets/: Pasted-Don-t-start-building-anything-untill-i-say-Build-ok-this-is-about-event-that-Build-Real-Time-O-1761581299477_1761581299477.txt
blitz-tactics/: netlify.toml
blitz-tactics/backend/: Cargo.toml
blitz-tactics/backend/src/: contract.rs  lib.rs  service.rs  state.rs
blitz-tactics/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
blitz-tactics/frontend/src/: App.tsx  index.css
blitz-tactics/frontend/src/components/: Card.tsx  Header.tsx
blitz-tactics/frontend/src/data/: cards.ts
blitz-tactics/frontend/src/pages/: Collection.tsx  Dashboard.tsx  GameBoard.tsx  HomePage.tsx
