[package]
name = "blitz-tactics"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = "7.0"
thiserror = "2.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "blitz-tactics-contract"
path = "src/contract.rs"

[[bin]]
name = "blitz-tactics-service"
path = "src/service.rs"

[profile.release]
debug = false
lto = true
opt-level = "s"
strip = true

[workspace]
